<resources>
    <string name="app_name">SessionManager</string>
    <string name="action_sort_by_id">Sort by ID</string>
    <string name="action_sort_by_name">Sort by Name</string>
    <string name="action_sort_by_gender">Sort by Gender</string>
    <string name="action_sort_by_age">Sort by Age</string>

    <string name="hint_id">ID</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="male">♂</string>
    <string name="female">♀</string>
    <string name="message_sure">OK</string>
    <string name="message_cancel">Cancel</string>
    <string name="message_add_member">Add Member</string>
    <string name="message_invalid">Please input valid value.</string>
    <string name="message_join">&#160;has joined.</string>
    <string name="message_left">&#160;has left.</string>

</resources>
